ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/LoanApplicationLiability__c.object-meta.xml
<CustomObject>
    <label>Loan Application Liability</label>
    <nameField>
        <label>Loan Application Liability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application Liabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>