ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/ClearedAtSettlement__c.field-meta.xml
<CustomField>
    <fullName>ClearedAtSettlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleared At Settlement</label>
    <type>Checkbox</type>
</CustomField>