ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/ConsolidateDebt__c.field-meta.xml
<CustomField>
    <fullName>ConsolidateDebt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidate Debt</label>
    <type>Checkbox</type>
</CustomField>