ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/CreditCardPostConsolidationIntention__c.field-meta.xml
<CustomField>
    <fullName>CreditCardPostConsolidationIntention__c</fullName>
    <label>Credit Card Post Consolidation Intention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LiabilityCardRepaymentType</valueSetName>
    </valueSet>
</CustomField>