ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/CreditCardPostConsolidationLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditCardPostConsolidationLimit__c</fullName>
    <label>Credit Card Post Consolidation Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>