ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/CreditCardRepaymentType__c.field-meta.xml
<CustomField>
    <fullName>CreditCardRepaymentType__c</fullName>
    <label>Credit Card Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditCardRepaymentTypes</valueSetName>
    </valueSet>
</CustomField>