ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/Creditor__c.field-meta.xml
<CustomField>
    <fullName>Creditor__c</fullName>
    <label>Creditor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>