ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/CurrentInterestRate__c.field-meta.xml
<CustomField>
    <fullName>CurrentInterestRate__c</fullName>
    <label>Current Interest Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>