ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/DebtType__c.field-meta.xml
<CustomField>
    <fullName>DebtType__c</fullName>
    <label>Debt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DebtTypes</valueSetName>
    </valueSet>
</CustomField>