ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/ExitCostAmount__c.field-meta.xml
<CustomField>
    <fullName>ExitCostAmount__c</fullName>
    <label>Exit Cost Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>