ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/FixedInterestTermRemainingMonths__c.field-meta.xml
<CustomField>
    <fullName>FixedInterestTermRemainingMonths__c</fullName>
    <label>Fixed Interest Term Remaining (Months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>