ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/FixedInterestTermRemainingYears__c.field-meta.xml
<CustomField>
    <fullName>FixedInterestTermRemainingYears__c</fullName>
    <label>Fixed Interest Term Remaining (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>