ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/FLEXId__c.field-meta.xml
<CustomField>
    <fullName>FLEXId__c</fullName>
    <label>FLEXId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>