ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/HaveMortgageOverThisProperty__c.field-meta.xml
<CustomField>
    <fullName>HaveMortgageOverThisProperty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Mortgage Over This Property</label>
    <type>Checkbox</type>
</CustomField>