ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/Howmuchtoconsolidate__c.field-meta.xml
<CustomField>
    <fullName>Howmuchtoconsolidate__c</fullName>
    <label>How much to consolidate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>