ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/InitialLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>InitialLoanAmount__c</fullName>
    <label>Initial Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>