ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/InterestCapitalised__c.field-meta.xml
<CustomField>
    <fullName>InterestCapitalised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Capitalised</label>
    <type>Checkbox</type>
</CustomField>