ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/InterestOnlyTermRemainingMonths__c.field-meta.xml
<CustomField>
    <fullName>InterestOnlyTermRemainingMonths__c</fullName>
    <label>Interest Only Term Remaining (Months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>