ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/InterestOnlyTermRemainingYears__c.field-meta.xml
<CustomField>
    <fullName>InterestOnlyTermRemainingYears__c</fullName>
    <label>Interest Only Term Remaining (Years)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>