ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <description
  >The interest rate for the liability (where applicable).</description>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>