ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/InterestRateType__c.field-meta.xml
<CustomField>
    <fullName>InterestRateType__c</fullName>
    <label>Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InterestTypes</valueSetName>
    </valueSet>
</CustomField>