ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/IsJointLiability__c.field-meta.xml
<CustomField>
    <fullName>IsJointLiability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Joint Liability</label>
    <type>Checkbox</type>
</CustomField>