ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/LoanIsSplit__c.field-meta.xml
<CustomField>
    <fullName>LoanIsSplit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Is Split</label>
    <type>Checkbox</type>
</CustomField>