ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/LoanLimit__c.field-meta.xml
<CustomField>
    <fullName>LoanLimit__c</fullName>
    <label>Loan Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>