ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/LoanStartDate__c.field-meta.xml
<CustomField>
    <fullName>LoanStartDate__c</fullName>
    <label>Loan Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>