ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/LoanTerm__c.field-meta.xml
<CustomField>
    <fullName>LoanTerm__c</fullName>
    <label>Loan Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>