ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/MonthlyPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPaymentAmount__c</fullName>
    <label>Monthly Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>