ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/MortgageRepaymentType__c.field-meta.xml
<CustomField>
    <fullName>MortgageRepaymentType__c</fullName>
    <label>Mortgage Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal and Interest</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>