ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/OtherInstitutionName__c.field-meta.xml
<CustomField>
    <fullName>OtherInstitutionName__c</fullName>
    <label>Other Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>