ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/OutstandingBalance__c.field-meta.xml
<CustomField>
    <fullName>OutstandingBalance__c</fullName>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>