ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/ReducedCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>ReducedCreditLimit__c</fullName>
    <label>Reduced Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>