ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/RefinanceReason__c.field-meta.xml
<CustomField>
    <fullName>RefinanceReason__c</fullName>
    <description>The reason the liability is being refinanced.</description>
    <label>Refinance Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>