ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/RemainingTerm__c.field-meta.xml
<CustomField>
    <fullName>RemainingTerm__c</fullName>
    <label>Remaining Term</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>