ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/RepaymentType__c.field-meta.xml
<CustomField>
    <fullName>RepaymentType__c</fullName>
    <label>Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RepaymentTypes</valueSetName>
    </valueSet>
</CustomField>