ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/UnpaidBalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceAmount__c</fullName>
    <label>Unpaid Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>