ctm-sf-homeloan-app/main/default/objects/LoanApplicationLiability__c/fields/UnsureOfBalance__c.field-meta.xml
<CustomField>
    <fullName>UnsureOfBalance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsure Of Balance</label>
    <type>Checkbox</type>
</CustomField>